--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "deploy": "npm run build && npm run export",
+    "deploy": "next build && next export",
     "postbuild": "next-on-netlify"
   },
   "dependencies": {
