--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "deploy": "next build && next export",
-    "postbuild": "next-on-netlify"
+    "deploy": "next build && next export"
   },
   "dependencies": {
     "emailjs-com": "^2.6.4",
